<resources>
    <string name="app_name">Whisk</string>
    <string name="action_settings">Settings</string>
    <string name="Save">Save</string>\
    <string name="title_activity_navigation">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="eula">Eula: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sagittis, est in pulvinar varius, nulla metus suscipit enim, eu volutpat sem magna sed lacus. Donec tempor libero eget dui euismod eget luctus libero tempor. Quisque felis mauris, malesuada accumsan vulputate quis, sodales et nibh. Mauris tellus neque, interdum quis blandit sagittis, tincidunt at urna. Cras luctus feugiat metus, in sollicitudin felis laoreet sed. Mauris posuere mattis felis. Morbi enim odio, accumsan ac tincidunt pharetra, mattis sit amet turpis. Vivamus lobortis aliquet ante nec aliquet. Suspendisse potenti. Praesent rutrum condimentum ante et congue. In faucibus posuere arcu, ut congue sem dictum ac. Cras ante libero, pellentesque et fermentum ut, congue nec mi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed euismod malesuada sapien ut eleifend. </string>
    <string name="updates">Upates in this version: Donec sollicitudin sodales turpis eget congue. Nulla facilisi. Proin facilisis eros vel mauris mollis tempus. </string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_filter">Recipes</string>
    <string name="title_activity_recipe">Ingredients</string>
    <string name="title_activity_search_nutrition">Types</string>
    <string name="title_activity_output_nutrition">Contents </string>
    <string name="Paleo">Paleo</string>
    <string name="Peanuts">Peanuts</string>
    <string name="Eggs">Eggs</string>
    <string name="title_activity_nutrition">Nutrition</string>
    <string name="title_activity_nutrition_output">NutritionOutput</string>
    <string name="title_activity_timer">Timer</string>
    <string name="title_activity_timer_dennis">Timer</string>
    <string name="title_activity_preferences">Saved Recipes</string>
    <string name="time_text">0:00:00</string>
    <string name="button_begin">Start</string>
    <string name="button_end">Done</string>
    <string name="hourString">Hr</string>
    <string name="minuteString">Mn</string>
    <string name="secondString">Sc</string>
    <string name="resetString">RESET</string>
    <string name="stringPause">Pause</string>
    <string name="stringResume">Resume</string>
    <string name="title_activity_timer_notification">TimerNotification</string>
    <string name="stopRingingString">Stop Ringing !!!</string>


    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="favouriteString">Alert Tones</string>
    <string name="chooseString">Choose the Alert Tones</string>

    <string name="settingString">Setting</string>
    <string name="buttonStart">Start</string>
    <string name="buttonReset">Reset</string>
    <string name="buttonResume">Resume</string>
    <string name="buttonPause">Pause</string>
    <string name="stringSec">sec</string>
    <string name="stringMin">minute</string>
    <string name="stringHr">hour</string>
    <string name="title_activity_urlview">Recipe</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_url_view">UrlView</string>
    <string name="title_activity_ur_lview">Recipe</string>
    <string name="title_activity_ingredients_list">Ingredients List</string>
    <string name="title_activity_item">Ingredients</string>
    <string name="title_activity_maps">Super Market Locations</string>


    <!-- Style for text on search button -->
    <style name="button_text" >
        <item name="android:layout_width" >fill_parent</item>
        <item name="android:layout_height" >wrap_content</item>
        <item name="android:textColor" >#ffffff</item>
        <item name="android:gravity" >center</item>
        <item name="android:layout_margin" >3dp</item>
        <item name="android:textSize" >30sp</item>
        <item name="android:textStyle" >bold</item>
        <item name="android:shadowColor" >#000000</item>
        <item name="android:shadowDx" >1</item>
        <item name="android:shadowDy" >1</item>
        <item name="android:shadowRadius" >2</item>
    </style>



</resources>
