<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_timer_dennis" tools:context="com.example.team3.whisk.TimerDennis">

    <TextView
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:textSize="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/time_text"
        android:id="@+id/timeText"
        android:gravity="center"
        android:layout_marginTop="108dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <NumberPicker
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:id="@+id/numberPickerHR"
        android:layout_alignTop="@+id/timeText"
        android:layout_alignLeft="@+id/timeText"
        android:layout_alignStart="@+id/timeText"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="41dp" />

    <NumberPicker
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/numberPickerMIN"
        android:layout_alignTop="@+id/timeText"
        android:layout_toRightOf="@+id/numberPickerHR"
        android:layout_toEndOf="@+id/numberPickerHR" />

    <NumberPicker
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:id="@+id/numberPickerSEC"
        android:layout_alignTop="@+id/timeText"
        android:layout_toRightOf="@+id/numberPickerMIN"
        android:layout_toEndOf="@+id/numberPickerMIN" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stringHr"
        android:textSize="17dp"
        android:id="@+id/hourstext"
        android:layout_alignBottom="@+id/timeText"
        android:layout_alignRight="@+id/numberPickerHR"
        android:layout_alignEnd="@+id/numberPickerHR"
        android:layout_marginBottom="47dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stringMin"
        android:textSize="17dp"
        android:id="@+id/mintext"
        android:layout_alignTop="@+id/hourstext"
        android:layout_alignLeft="@+id/numberPickerMIN"
        android:layout_alignStart="@+id/numberPickerMIN"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stringSec"
        android:textSize="17dp"
        android:id="@+id/sectext"
        android:layout_alignTop="@+id/mintext"
        android:layout_alignRight="@+id/numberPickerSEC"
        android:layout_alignEnd="@+id/numberPickerSEC" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:background="@drawable/circle_shape"
        android:max="100"
        android:progress="65"
        android:indeterminate="false"
        android:id="@+id/progressBar"
        android:layout_marginTop="34dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/stopRing"
        android:background="@drawable/bell"
        android:layout_alignTop="@+id/timeText"
        android:layout_toLeftOf="@+id/sectext"
        android:layout_toStartOf="@+id/sectext" />

    <Button
        android:layout_width="175.5dp"
        android:layout_height="78dp"
        android:text="@string/buttonPause"
        android:background="#F4D03F"
        android:id="@+id/buttonPause"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="175.5dp"
        android:layout_height="78dp"
        android:text="@string/buttonResume"
        android:background="#5DADE2"
        android:id="@+id/buttonResume"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="175.5dp"
        android:layout_height="78dp"
        android:text="@string/buttonReset"
        android:background="#CD6155"
        android:id="@+id/buttonReset"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="385.5dp"
        android:layout_height="78dp"
        android:text="@string/buttonStart"
        android:background="#58D68D"
        android:id="@+id/buttonStart"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
